[gd_scene load_steps=3 format=3 uid="uid://dafpgh0xkwwt8"]

[ext_resource type="Script" uid="uid://ceuus7pdgao6p" path="res://scripts/components/dialogue_component.gd" id="1_u4hkn"]

[sub_resource type="SphereShape3D" id="SphereShape3D_3b0af"]

[node name="DialogueComponent" type="Node3D"]
script = ExtResource("1_u4hkn")
range = 10.0

[node name="EnterDialogueRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnterDialogueRange"]
shape = SubResource("SphereShape3D_3b0af")

[connection signal="body_entered" from="EnterDialogueRange" to="." method="_on_enter_dialogue_range_body_entered"]
[connection signal="body_exited" from="EnterDialogueRange" to="." method="_on_enter_dialogue_range_body_exited"]
